// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picture renders 1`] = `
<img
  alt="A sample test image"
  className="wrapper"
  sizes=""
  src="//placehold.it/200x200"
  srcSet=""
/>
`;

exports[`Picture renders a lazy-load variant 1`] = `
<img
  alt="Test"
  className="wrapper"
  loading="auto"
  sizes=""
  src="//placehold.it/200x200"
  srcSet="//placehold.it/400x400 400w, //placehold.it/600x600 600w"
/>
`;
